--- a/church-is-frontend-master/index.html
+++ b/church-is-frontend-master/index.html
@@ -1,16 +1,12 @@
-
-
-
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Church Admin App</title>
     
     <script src="https://kit.fontawesome.com/dce36c4ed2.js" crossorigin="anonymous"></script>
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest/" href="static/manifest.json" />
 
     <style>
         #myProgress {
